BusinessController expand. One of endpoints provided with functionality