@@ -6,7 +6,6 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class UserDetailsImpl implements UserDetails {
@@ -23,12 +22,12 @@ public class UserDetailsImpl implements UserDetails {
         this.password = user.getPassword();
         this.nonLocked = isAccountNonLocked();
         this.rolesAndAuthorities =
-                Collections.emptyList();
+                List.of(new SimpleGrantedAuthority(ROLE_PREFIX + user.getRole()));
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return null;
+        return rolesAndAuthorities;
     }
 
     @Override
